# live-vlm-webui

./: CHANGELOG.md  README.md  pyproject.toml
docs/: troubleshooting.md
docs/setup/: docker.md  testing-feature-branch-droplet.md
puppy_ros2_cli/: Dockerfile
puppy_ros2_cli/puppy_control_msgs/: CMakeLists.txt  package.xml
puppy_ros2_cli/puppy_control_msgs/msg/: SetServo.msg
scripts/: pre_commit_check.sh  start_container.sh  start_server.sh
src/live_vlm_webui/: __init__.py  server.py  video_processor.py  vlm_service.py
src/live_vlm_webui/static/: index.html
tests/e2e/: test_real_workflow.py
vlm_bridge_puppypi/: vlm_ros_bridge.py  vlm_ros_bridge_ver1.py
